* Fixed: removed z-index that made the zoom area hiding other elements in certain themes.
git-svn-id: https://plugins.svn.wordpress.org/yith-woocommerce-zoom-magnifier/trunk@1152860 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/yith_magnifier.css
+++ b/assets/css/yith_magnifier.css
@@ -1,6 +1,5 @@
 .yith_magnifier_zoom_wrap {
 	top: 0;
-	z-index: 9999;
 	position: relative;
 }
 
